# mongo-web-view

./: Dockerfile  README.md  docker-compose.yml  mongo-web-view.cabal
api/: Api.hs  Dockerfile  Main.hs  Routes.hs  api.cabal
api/Exec/: Main.hs
api/Server/: Routes.hs  Server.hs  Utils.hs
api/Server/Services/: DB.hs  Parser.hs
api/Server/Types/: ApiError.hs  ApiResponse.hs  Error.hs
api/Services/: DB.hs
api/Spec/Server/Services/: DBSpec.hs  ParserSpec.hs
app/: Dockerfile  karma.conf.js  package.json
app/DB/: DB.hs
app/Web/: Routes.hs  Server.hs
app/Web/Actions/: Database.hs
app/assets/: index.html
app/assets/css/: doc.css
app/assets/js/: api-svc.js  app.js  collections.js  connect.js  doc.js  documents.js
app/assets/templates/: collections.html  connect.html  doc.html  documents.html  navbar.html
client/: Dockerfile
client/public/css/: main.css
client/public/js/: api-svc.js  app.js  collections.js  connect.js
client/public/templates/: connect.html
exec/: Main.hs
integration-test/: Dockerfile  integration-test.cabal
server/: Dockerfile  Routes.hs  Server.hs  server.cabal
server/Actions/: Database.hs
server/Services/: DB.hs
spec/: Dockerfile  spec.cabal
spec/Integration/: Data.hs  IntegrationSpec.hs  Setup.hs
src/: Main.hs
src/DB/: DB.hs
src/Web/: Routes.hs  Server.hs  Utils.hs
src/Web/Actions/: Database.hs  Hello.hs  Utils.hs
src/Web/Views/: Index.hs  Utils.hs
test/: Dockerfile  Integration.hs  IntegrationSpec.hs  test-mongo-web-view.hs
test/Integration/: Data.hs  IntegrationSpec.hs  Setup.hs
