name:                mongo-web-view

version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- URL for the project homepage or repository.
homepage:            https://github.com/TGOlson/mongo-web-view.git

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
-- license-file:        LICENSE

author:              Tyler Olson

maintainer:          tydotg@gmail.com

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <4.8,
                       scotty,
                       aeson >= 0.6 && <0.7,
                       text,
                       mongoDB,
                       mtl,
                       aeson-bson

  exposed-modules:     Web.Server

  other-modules:       Web.Routes
                       Web.Actions.Database
                       DB.DB

  default-language:    Haskell2010

executable mongo-web-view
  main-is:             Main.hs

  hs-source-dirs:      exec

  build-depends:       base >=4.7 && <4.8,
                       mongo-web-view

  default-language:    Haskell2010


test-suite hspec
  type:                exitcode-stdio-1.0

  hs-source-dirs:      test

  main-is:             Spec.hs

  other-modules:       Integration.Data,
                       Integration.IntegrationSpec,
                       Integration.Setup

  build-depends:       base >=4.7 && <4.8,
                       hspec,
                       HTTP,
                       lens,
                       mongo-web-view,
                       bytestring,
                       aeson,
                       mongoDB
