name:                mongo-web-view
version:             0.1.0.0
synopsis:            Mongo web view.
description:         Explore a mongo database with a simple web UI.
homepage:            https://github.com/TGOlson/mongo-web-view.git
license:             MIT
author:              Tyler Olson
maintainer:          tydotg@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      server

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       scotty >=0.10 && <0.11,
                       mtl >=2.2 && <2.3,
                       aeson >=0.6 && <0.7,
                       text,
                       aeson-bson,
                       wai-extra,
                       wai-middleware-static

  exposed-modules:     Server

  other-modules:       Routes
                       Actions.Database
                       Services.DB

  default-language:    Haskell2010


executable server
  main-is:             Main.hs

  hs-source-dirs:      exec

  build-depends:       base >=4.7 && <4.8,
                       mongo-web-view

  default-language:    Haskell2010


executable test
  main-is:             Spec.hs

  hs-source-dirs:      test

  main-is:             Spec.hs

  other-modules:       Integration.Data,
                       Integration.IntegrationSpec,
                       Integration.Setup

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       aeson >=0.6 && <0.7,
                       hspec >=2.1 && <2.2,
                       bytestring >=0.10 && <0.11,
                       HTTP >=4000.2 && <4000.3

  default-language:    Haskell2010
