name:                mongo-web-view
version:             0.1.0.0
synopsis:            Mongo web view.
description:         Explore a mongo database with a simple web UI.
homepage:            https://github.com/TGOlson/mongo-web-view.git
license:             MIT
author:              Tyler Olson
maintainer:          tydotg@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      server
  default-language:    Haskell2010

  exposed-modules:     Server

  other-modules:       Routes
                       Actions.Database
                       Services.DB

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       scotty >=0.10 && <0.11,
                       mtl >=2.2 && <2.3,
                       aeson >=0.6 && <0.7,
                       text,
                       aeson-bson,
                       wai-extra,
                       wai-middleware-static


executable server
  main-is:             Main.hs
  hs-source-dirs:      exec
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       mongo-web-view


test-suite integration
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       aeson >=0.6 && <0.7,
                       hspec >=2.1 && <2.2,
                       bytestring >=0.10 && <0.11,
                       HTTP >=4000.2 && <4000.3
