name:                api
version:             0.1.0.0
synopsis:            Mongo web view.
description:         Explore a mongo database with a simple web UI.
homepage:            https://github.com/TGOlson/mongo-web-view.git
license:             MIT
author:              Tyler Olson
maintainer:          tydotg@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      Server
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       scotty >=0.10 && <0.11,
                       mtl >=2.2 && <2.3,
                       aeson >=0.6 && <0.7,
                       parsec,
                       text,
                       aeson-bson,
                       wai-extra,
                       wai-middleware-static

  exposed-modules:     Server,
                       Routes,
                       Services.DB,
                       Services.Parser,
                       Types.Error


executable api
  hs-source-dirs:      Exec
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       api


executable unit-tests
  hs-source-dirs:      Spec
  main-is:             Spec.hs
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       hspec >=2.1 && <2.2,
                       api
