name:                server
version:             0.1.0.0
synopsis:            Mongo web view.
description:         Explore a mongo database with a simple web UI.
homepage:            https://github.com/TGOlson/mongo-web-view.git
license:             MIT
author:              Tyler Olson
maintainer:          tydotg@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable server
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       scotty >=0.10 && <0.11,
                       mtl >=2.2 && <2.3,
                       aeson >=0.6 && <0.7,
                       text,
                       aeson-bson,
                       wai-extra,
                       wai-middleware-static
