name:                test
version:             0.1.0.0
synopsis:            Mongo web view.
description:         Explore a mongo database with a simple web UI.
homepage:            https://github.com/TGOlson/mongo-web-view.git
license:             MIT
author:              Tyler Olson
maintainer:          tydotg@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable test
  hs-source-dirs:      .
  main-is:             Spec.hs
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8,
                       mongoDB >=2.0 && <2.1,
                       aeson >0.7,
                       hspec >=2.1 && <2.2,
                       wreq,
                       lens,
                       lens-aeson
